[package]
name = "gatling"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Exploration Team @ StarkWare <@keep-starknet-strange>"]
repository = "https://github.com/keep-starknet-strange/gomu-gomu-no-gatling"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["starknet", "cairo"]
description = "Gomu Gomu No Gatling is a blazing fast tool to benchmark Starknet sequencers."

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
starknet = "0.12.0"
goose = "0.17.2"
tracing = "0.1.40"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.14.0"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
url = "2.5.2"
rand = { version = "0.8.5", features = ["rand_chacha"] }
lazy_static = "1.5.0"
sysinfo = "0.30.12"
crossbeam-queue = "0.3.11"
tracing-subscriber = "0.3.18"

[features]
default = []
with_sps = []
